[package]
name = "minecrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
reqwest = {version = "0.12.2", features = ["json"]}
bytes = "1.6.0"
sha1 = "0.10.6"
hex = "0.4.3"
shell-words = "1.1.0"
